--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bootstrap": "^4.5.3",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "react-google-flight-datepicker": "^0.1.17"
+    "react-google-flight-datepicker": "^0.1.17",
     "react-bootstrap": "^1.4.0"
   }
 }
