--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "if-env": "^1.0.4",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
     "react-google-flight-datepicker": "^0.1.17",
     "react-router-dom": "^5.2.0"
   }
