--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,12 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "bootstrap": "^4.5.3",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.1"
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.14.0",
+    "react-google-flight-datepicker": "^0.1.17",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
