--- a/package.json
+++ b/package.json
@@ -16,18 +16,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^4.1.0",
+    "concurrently": "^5.3.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
     "express": "^4.16.3",
-    "if-env": "^1.0.4",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-google-flight-datepicker": "^0.1.17",
-    "react-router-dom": "^5.2.0"
+    "if-env": "^1.0.4"
   }
 }
