--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "mdbreact": "^5.0.0",
     "mongoose": "^5.11.3"
   }
 }
