--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,17 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "is-empty": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-google-flight-datepicker": "^0.1.17",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1"
+    "react-redux": "^7.2.2",
+    "react-scripts": "^4.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,5 +29,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "engines": {
+    "node": "12.18.3"
+  }
 }
