--- a/package.json
+++ b/package.json
@@ -30,6 +30,14 @@
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "react-fontawesome": "^1.7.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "validator": "^13.5.1"
   }
 }
